<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tablamenu"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tableroplanoocolor"
    android:gravity="center|fill_horizontal"
    android:orientation="horizontal"
    android:padding="30dp" >

    <!--
         <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tituloAplicacion"
        android:textColor="#2E2E2E"
        android:textSize="25sp" /> 
        
        "#0B615E"
    -->


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#424242"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="10dp"
            android:layout_height="10dp" >
        </TableRow>

        <Button
            android:id="@+id/Button01"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#0B615E"
            android:onClick="unJugador"
            android:text="@string/UnJugador"
            android:textColor="#EFFBFB"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="4dp"
            android:layout_height="4dp" >
        </TableRow>

        <Button
            android:id="@+id/Button02"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#04B45F"
            android:text="@string/DosJugadores"
            android:textColor="#EFFBFB"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="4dp"
            android:layout_height="4dp" >
        </TableRow>

        <Button
            android:id="@+id/Button03"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#F3F781"
            android:onClick="lanzarAcercaDe"
            android:text="@string/AcercaDe"
            android:textColor="#424242"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="4dp"
            android:layout_height="4dp" >
        </TableRow>

        <Button
            android:id="@+id/Button04"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#FF0040"
            android:onClick="salir"
            android:text="@string/Salir"
            android:textColor="#EFFBFB"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="10dp"
            android:layout_height="10dp" >
        </TableRow>

    </LinearLayout>

</LinearLayout>